--- a/css/style.css
+++ b/css/style.css
@@ -121,25 +121,35 @@ body {
 .tag-size-1 {
   font-size: 16px;
   color: black;
+  text-decoration: none;
 }
 
 .tag-size-2 {
   font-size: 20px;
   color: red;
+  text-decoration: none;
 }
 
 .tag-size-3 {
   font-size: 24px;
   color: pink;
+  text-decoration: none;
 }
 
 .tag-size-4 {
   font-size: 28px;
   color: purple;
+  text-decoration: none;
 }
 
 .tag-size-5 {
   font-size: 32px;
   color: purple;
+  text-decoration: none;
+}
+
+.authors li {
+  display: inline-block;
+  line-height: normal;
 }
 /*# sourceMappingURL=style.css.map */
